# Songolo

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  README.md  download.conf  gitpod.Dockerfile  main.py  pyproject.toml  tox.ini
songolo/: __init__.py  api.py  songs.py  utils.py
