[tool.poetry]
name = "Songolo"
version = "0.0.1"
description = "A self-hosted git-based music server."
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
license = "GPLv3-or-later"

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.12.17"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
eyed3 = "^0.9.6"
GitPython = "^3.1.26"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79